Fluigi/src/ufgrammar/ufNetlistParser.java
// $ANTLR 3.5 /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g 2014-10-19 23:00:34

package ufgrammar;
import netlist.*;
import java.util.HashMap;
import java.util.LinkedList;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class ufNetlistParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "INT", "WS", "')'", "','", 
		"';'", "'CHANNEL'", "'DEVICE'", "'END LAYER;'", "'INFER MUX'", "'LAYER'", 
		"'LONG CELL TRAP'", "'MLSI'", "'MUX'", "'N'", "'NODE'", "'Other'", "'P'", 
		"'PORT'", "'SET X'", "'SET Y'", "'SQUARE CELL TRAP'", "'VALVE'", "'chamberLength='", 
		"'chamberSpacing='", "'chamberWidth='", "'channelWidth='", "'from'", "'in('", 
		"'l='", "'numChambers='", "'of'", "'on'", "'orientation='", "'out('", 
		"'r='", "'to'", "'w='"
	};
	public static final int EOF=-1;
	public static final int T__7=7;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int ID=4;
	public static final int INT=5;
	public static final int WS=6;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ufNetlistParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ufNetlistParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ufNetlistParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g"; }


	/** Map variable name to Integer object holding value */

	public HashMap<String, Component> components = new HashMap<>();
	public HashMap<String, Channel> channels = new HashMap<>();
	public HashMap<String, Module> modules = new HashMap<>();

	public String techType;

	public Device d;

	private String curLayer;

	private ArrayList<Component> tempComponents = new ArrayList<>();
	private ArrayList<Channel> tempChannels = new ArrayList<>();

	public void cleanUp(){
		components.clear();
		components = null;
		channels.clear();
		channels = null;
		d = null;
		techType = null;
		curLayer = null;
		}
		




	// $ANTLR start "netlist"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:40:1: netlist : header ( block )+ EOF ;
	public final void netlist() throws RecognitionException {
		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:40:9: ( header ( block )+ EOF )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:40:11: header ( block )+ EOF
			{
			pushFollow(FOLLOW_header_in_netlist22);
			header();
			state._fsp--;

			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:40:18: ( block )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==14) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:40:19: block
					{
					pushFollow(FOLLOW_block_in_netlist25);
					block();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_netlist30); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "netlist"



	// $ANTLR start "header"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:44:1: header : 'DEVICE' name= ID 'of' tech ';' ;
	public final void header() throws RecognitionException {
		Token name=null;
		ParserRuleReturnScope tech1 =null;

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:44:9: ( 'DEVICE' name= ID 'of' tech ';' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:44:11: 'DEVICE' name= ID 'of' tech ';'
			{
			match(input,11,FOLLOW_11_in_header41); 
			name=(Token)match(input,ID,FOLLOW_ID_in_header45); 
			match(input,35,FOLLOW_35_in_header47); 
			pushFollow(FOLLOW_tech_in_header49);
			tech1=tech();
			state._fsp--;

			match(input,9,FOLLOW_9_in_header51); 

			            techType = (tech1!=null?input.toString(tech1.start,tech1.stop):null);
			            if (techType.equals("MLSI")){
			            	d = new MLSIDevice((name!=null?name.getText():null));
			            } else {
			            //throw some sort of 'this isn'st suppoerted error
			            }
			            
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "header"


	public static class tech_return extends ParserRuleReturnScope {
	};


	// $ANTLR start "tech"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:57:1: tech : ( 'MLSI' | 'Other' );
	public final ufNetlistParser.tech_return tech() throws RecognitionException {
		ufNetlistParser.tech_return retval = new ufNetlistParser.tech_return();
		retval.start = input.LT(1);

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:57:7: ( 'MLSI' | 'Other' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:
			{
			if ( input.LA(1)==16||input.LA(1)==20 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tech"



	// $ANTLR start "block"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:61:1: block : layerStat (s= stat )+ 'END LAYER;' ;
	public final void block() throws RecognitionException {
		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:61:8: ( layerStat (s= stat )+ 'END LAYER;' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:61:10: layerStat (s= stat )+ 'END LAYER;'
			{
			pushFollow(FOLLOW_layerStat_in_block82);
			layerStat();
			state._fsp--;

			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:61:20: (s= stat )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==ID||LA2_0==10||LA2_0==13||LA2_0==15||LA2_0==17||LA2_0==19||LA2_0==22||(LA2_0 >= 25 && LA2_0 <= 26)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:61:21: s= stat
					{
					pushFollow(FOLLOW_stat_in_block87);
					stat();
					state._fsp--;

					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			match(input,12,FOLLOW_12_in_block91); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "stat"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:63:1: stat : ( portStat | channelStat | muxStat | nodeStat | cellTrapStat | valveStat | setCoordStat | inferMuxStat );
	public final void stat() throws RecognitionException {
		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:63:7: ( portStat | channelStat | muxStat | nodeStat | cellTrapStat | valveStat | setCoordStat | inferMuxStat )
			int alt3=8;
			switch ( input.LA(1) ) {
			case 22:
				{
				alt3=1;
				}
				break;
			case 10:
				{
				alt3=2;
				}
				break;
			case 17:
				{
				alt3=3;
				}
				break;
			case 19:
				{
				alt3=4;
				}
				break;
			case 15:
			case 25:
				{
				alt3=5;
				}
				break;
			case 26:
				{
				alt3=6;
				}
				break;
			case ID:
				{
				alt3=7;
				}
				break;
			case 13:
				{
				alt3=8;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:63:9: portStat
					{
					pushFollow(FOLLOW_portStat_in_stat100);
					portStat();
					state._fsp--;

					}
					break;
				case 2 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:64:4: channelStat
					{
					pushFollow(FOLLOW_channelStat_in_stat105);
					channelStat();
					state._fsp--;

					}
					break;
				case 3 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:65:4: muxStat
					{
					pushFollow(FOLLOW_muxStat_in_stat110);
					muxStat();
					state._fsp--;

					}
					break;
				case 4 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:66:4: nodeStat
					{
					pushFollow(FOLLOW_nodeStat_in_stat115);
					nodeStat();
					state._fsp--;

					}
					break;
				case 5 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:67:4: cellTrapStat
					{
					pushFollow(FOLLOW_cellTrapStat_in_stat120);
					cellTrapStat();
					state._fsp--;

					}
					break;
				case 6 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:68:4: valveStat
					{
					pushFollow(FOLLOW_valveStat_in_stat125);
					valveStat();
					state._fsp--;

					}
					break;
				case 7 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:69:4: setCoordStat
					{
					pushFollow(FOLLOW_setCoordStat_in_stat130);
					setCoordStat();
					state._fsp--;

					}
					break;
				case 8 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:70:4: inferMuxStat
					{
					pushFollow(FOLLOW_inferMuxStat_in_stat135);
					inferMuxStat();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stat"



	// $ANTLR start "layerStat"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:73:1: layerStat : 'LAYER' layerName= ID 'of' photoresist ';' ;
	public final void layerStat() throws RecognitionException {
		Token layerName=null;
		ParserRuleReturnScope photoresist2 =null;

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:74:2: ( 'LAYER' layerName= ID 'of' photoresist ';' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:74:4: 'LAYER' layerName= ID 'of' photoresist ';'
			{
			match(input,14,FOLLOW_14_in_layerStat147); 
			layerName=(Token)match(input,ID,FOLLOW_ID_in_layerStat151); 
			match(input,35,FOLLOW_35_in_layerStat154); 
			pushFollow(FOLLOW_photoresist_in_layerStat156);
			photoresist2=photoresist();
			state._fsp--;

			match(input,9,FOLLOW_9_in_layerStat157); 

					curLayer = (layerName!=null?layerName.getText():null);
					if (!d.getLayers().containsKey(curLayer)){
					d.addLayer(curLayer, (photoresist2!=null?input.toString(photoresist2.start,photoresist2.stop):null));
					}
				
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "layerStat"


	public static class photoresist_return extends ParserRuleReturnScope {
	};


	// $ANTLR start "photoresist"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:82:1: photoresist : ( 'P' | 'N' );
	public final ufNetlistParser.photoresist_return photoresist() throws RecognitionException {
		ufNetlistParser.photoresist_return retval = new ufNetlistParser.photoresist_return();
		retval.start = input.LT(1);

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:83:2: ( 'P' | 'N' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:
			{
			if ( input.LA(1)==18||input.LA(1)==21 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "photoresist"



	// $ANTLR start "portStat"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:87:1: portStat : 'PORT' name= ID ( ',' name= ID )* ( 'r=' r= INT )? ';' ;
	public final void portStat() throws RecognitionException {
		Token name=null;
		Token r=null;

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:87:9: ( 'PORT' name= ID ( ',' name= ID )* ( 'r=' r= INT )? ';' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:87:11: 'PORT' name= ID ( ',' name= ID )* ( 'r=' r= INT )? ';'
			{
			match(input,22,FOLLOW_22_in_portStat187); 
			name=(Token)match(input,ID,FOLLOW_ID_in_portStat191); 

				MLSIPort p = new MLSIPort();
				components.put((name!=null?name.getText():null), p);
				d.addComponent(p, curLayer);
				tempComponents.add(p);
				
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:92:3: ( ',' name= ID )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==8) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:92:4: ',' name= ID
					{
					match(input,8,FOLLOW_8_in_portStat195); 
					name=(Token)match(input,ID,FOLLOW_ID_in_portStat199); 

						p = new MLSIPort();
						components.put((name!=null?name.getText():null), p);
						d.addComponent(p, curLayer);
						tempComponents.add(p);	
						
					}
					break;

				default :
					break loop4;
				}
			}

			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:97:5: ( 'r=' r= INT )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==39) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:97:6: 'r=' r= INT
					{
					match(input,39,FOLLOW_39_in_portStat205); 
					r=(Token)match(input,INT,FOLLOW_INT_in_portStat208); 
					}
					break;

			}

			match(input,9,FOLLOW_9_in_portStat211); 

				for(Component c: tempComponents){
					if(c.getClass()==MLSIPort.class){
					p = (MLSIPort) c;
					p.setWidth(2*(r!=null?Integer.valueOf(r.getText()):0));
					}
				}
				tempComponents.clear();
				
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "portStat"



	// $ANTLR start "channelStat"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:108:1: channelStat : 'CHANNEL' name= ID 'from' component1= ID port1= INT 'to' component2= ID port2= INT ( 'w=' w= INT )? ';' ;
	public final void channelStat() throws RecognitionException {
		Token name=null;
		Token component1=null;
		Token port1=null;
		Token component2=null;
		Token port2=null;
		Token w=null;

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:109:2: ( 'CHANNEL' name= ID 'from' component1= ID port1= INT 'to' component2= ID port2= INT ( 'w=' w= INT )? ';' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:109:5: 'CHANNEL' name= ID 'from' component1= ID port1= INT 'to' component2= ID port2= INT ( 'w=' w= INT )? ';'
			{
			match(input,10,FOLLOW_10_in_channelStat225); 
			name=(Token)match(input,ID,FOLLOW_ID_in_channelStat229); 
			match(input,31,FOLLOW_31_in_channelStat231); 
			component1=(Token)match(input,ID,FOLLOW_ID_in_channelStat235); 
			port1=(Token)match(input,INT,FOLLOW_INT_in_channelStat239); 
			match(input,40,FOLLOW_40_in_channelStat241); 
			component2=(Token)match(input,ID,FOLLOW_ID_in_channelStat245); 
			port2=(Token)match(input,INT,FOLLOW_INT_in_channelStat249); 
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:109:83: ( 'w=' w= INT )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==41) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:109:84: 'w=' w= INT
					{
					match(input,41,FOLLOW_41_in_channelStat252); 
					w=(Token)match(input,INT,FOLLOW_INT_in_channelStat255); 
					}
					break;

			}

			match(input,9,FOLLOW_9_in_channelStat258); 

				// fetch component1 and 2 from the hashmaps.  on correct layer, make
					Component c1 = components.get((component1!=null?component1.getText():null));
					Terminal cp1 = c1.getConnectionPoints().get((port1!=null?Integer.valueOf(port1.getText()):0)-1);
					Component c2 = components.get((component2!=null?component2.getText():null));
					Terminal cp2 = c2.getConnectionPoints().get((port2!=null?Integer.valueOf(port2.getText()):0)-1);
					Channel c = d.addChannel(c1, c2, curLayer);
					c.setChannelWidth((w!=null?Integer.valueOf(w.getText()):0));
					c.setSourcePoint(cp1);
					c.setTargetPoint(cp2);
					c1.setConnection(cp1, c);
					c2.setConnection(cp2, c);
					channels.put((name!=null?name.getText():null), c);	
				
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "channelStat"



	// $ANTLR start "nodeStat"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:125:1: nodeStat : 'NODE' name= ID ( ',' name= ID )* ';' ;
	public final void nodeStat() throws RecognitionException {
		Token name=null;

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:125:9: ( 'NODE' name= ID ( ',' name= ID )* ';' )
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:125:11: 'NODE' name= ID ( ',' name= ID )* ';'
			{
			match(input,19,FOLLOW_19_in_nodeStat268); 
			name=(Token)match(input,ID,FOLLOW_ID_in_nodeStat272); 

				MLSINode n = new MLSINode();
				components.put((name!=null?name.getText():null), n);
				d.addComponent(n, curLayer);
				
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:129:3: ( ',' name= ID )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==8) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:129:4: ',' name= ID
					{
					match(input,8,FOLLOW_8_in_nodeStat275); 
					name=(Token)match(input,ID,FOLLOW_ID_in_nodeStat279); 

						n = new MLSINode();
						components.put((name!=null?name.getText():null), n);
						d.addComponent(n, curLayer);
						
					}
					break;

				default :
					break loop7;
				}
			}

			match(input,9,FOLLOW_9_in_nodeStat283); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "nodeStat"



	// $ANTLR start "cellTrapStat"
	// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:136:1: cellTrapStat : ( 'SQUARE CELL TRAP' name= ID ( ',' name= ID )* ( 'channelWidth=' i0= INT )? ( 'chamberLength=' i1= INT )? ( 'chamberWidth=' i2= INT )? ( 'chamberSpacing=' i3= INT )? ';' | 'LONG CELL TRAP' name= ID ( ',' name= ID )* ( 'channelWidth=' i0= INT )? ( 'numChambers=' i4= INT )? ( 'chamberLength=' i1= INT )? ( 'chamberWidth=' i2= INT )? ( 'chamberSpacing=' i3= INT )? 'orientation=' b= ID ';' );
	public final void cellTrapStat() throws RecognitionException {
		Token name=null;
		Token i0=null;
		Token i1=null;
		Token i2=null;
		Token i3=null;
		Token i4=null;
		Token b=null;

		try {
			// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:137:2: ( 'SQUARE CELL TRAP' name= ID ( ',' name= ID )* ( 'channelWidth=' i0= INT )? ( 'chamberLength=' i1= INT )? ( 'chamberWidth=' i2= INT )? ( 'chamberSpacing=' i3= INT )? ';' | 'LONG CELL TRAP' name= ID ( ',' name= ID )* ( 'channelWidth=' i0= INT )? ( 'numChambers=' i4= INT )? ( 'chamberLength=' i1= INT )? ( 'chamberWidth=' i2= INT )? ( 'chamberSpacing=' i3= INT )? 'orientation=' b= ID ';' )
			int alt19=2;
			int LA19_0 = input.LA(1);
			if ( (LA19_0==25) ) {
				alt19=1;
			}
			else if ( (LA19_0==15) ) {
				alt19=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 19, 0, input);
				throw nvae;
			}

			switch (alt19) {
				case 1 :
					// /Users/cassie/NetBeansProjects/Fluigi/src/ufgrammar/ufNetlist.g:137:4: 'SQUARE CELL TRAP' name= ID ( ',' name= ID )* ( 'channelWidth=' i0= INT )? ( 'chamberLength=' i1= INT )? ( 'chamberWidth=' i2= INT )? ( 'chamberSpacing=' i3= INT )? ';'
					{
					match(input,25,FOLLOW_25_in_cellTrapStat294); 
					name=(Token)match(input,ID,FOLLOW_ID_in_cellTrapStat298); 
